# uyta

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  Makefile  README.md  map_save.json  player_save.json  workers_save.json
.cargo/: config.toml
data/: uyta.d  uyta.data  uyta.js
docs/: index.html  uyta.d  uyta.data  uyta.js  uyta.wasm
docs/static/: tiles.json  toolbar.json
src/: animal.rs  camera_controller.rs  inventory.rs  localization.rs  main.rs  map.rs  pause_menu.rs  player.rs  renderer.rs  shop_ui.rs  texture_handler.rs  tutorial.rs  ui.rs  upgrades.rs  upgrades_ui.rs  utils.rs  worker.rs
static/: animals.json  crops.json  localizations.json  tiles.json  toolbar.json  tooltips.json  upgrades.json
static/en/: general.json  toolbar.json  upgrades.json
static/localizations/: en.json  nl.json  ru.json
static/nl/: general.json  toolbar.json  upgrades.json
static/ru/: general.json  toolbar.json  upgrades.json
static/shaders/: wave.fs
