[package]
name = "uyta"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools = "0.14.0"
rand = "0.9.1"
serde = { version="1.0.219", features=["derive"] }
serde_json = "1.0.140"
serde_with = "3.12.0"
noise = "0.9.0"

[target.'cfg(windows)'.dependencies]
raylib = { version="5.5.1" }

[target.'cfg(unix)'.dependencies]
raylib = { version="5.5.1", features=["wayland"] }
